--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>4.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.5.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins> <!-- Maven Compiler Plugin -->
