--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins> <!-- Maven Compiler Plugin -->
